# Multi-Agent-Cooking-Assistant

./: .env.example  .gitignore  LICENSE  README.md  postman_collection.json  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agents/: __init__.py  chef_agent.py  grocer_agent.py  intent_agent.py  ranking_agent.py
app/api/: routes.py
app/core/: config.py
app/prompts/: chef_prompt.py  grocer_prompt.py  intent_prompt.py  ranking_prompt.py
app/schemas/: chef.py  grocer.py  intent.py  ranking.py  request.py  response.py
app/services/: llm_client.py  orchestrator.py  pricing_service.py
tests/: __init__.py  test_query.py  test_ranking.py
